--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,20 @@ body {
   font-family: "Poppins";
 }
 
+/* transition */
+@keyframes in-circle-swoop {
+  from {
+    clip-path: var(--circle-top-right-out);
+  }
+  to {
+    clip-path: var(--circle-bottom-right-in);
+  }
+}
+
+[transition-style="in:custom:circle-swoop"] {
+  --transition__duration: 5s;
+  animation-name: in-circle-swoop;
+}
 /* loader */
 .loader {
   position: absolute;
