--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,18 +9,20 @@ body {
 }
 
 /* transition */
-@keyframes in-circle-swoop {
-  from {
-    clip-path: var(--circle-top-right-out);
+@keyframes circle-in-hesitate {
+  0% {
+    clip-path: circle(0%);
   }
-  to {
-    clip-path: var(--circle-bottom-right-in);
+  40% {
+    clip-path: circle(40%);
+  }
+  100% {
+    clip-path: circle(125%);
   }
 }
 
-[transition-style="in:custom:circle-swoop"] {
-  --transition__duration: 5s;
-  animation-name: in-circle-swoop;
+[transition-style="in:circle:hesitate"] {
+  animation: 2.5s cubic-bezier(0.25, 1, 0.3, 1) circle-in-hesitate both;
 }
 /* loader */
 .loader {
@@ -51,7 +53,7 @@ body {
 .jimu-primary-loading:before,
 .jimu-primary-loading:after,
 .jimu-primary-loading {
-  background: #076fe5;
+  background: #262627;
   -webkit-animation: loading-keys-app-loading 0.8s infinite ease-in-out;
   animation: loading-keys-app-loading 0.8s infinite ease-in-out;
   width: 13.6px;
@@ -73,13 +75,13 @@ body {
   80%,
   100% {
     opacity: 0.75;
-    box-shadow: 0 0 #076fe5;
+    box-shadow: 0 0 #262627;
     height: 32px;
   }
 
   40% {
     opacity: 1;
-    box-shadow: 0 -8px #076fe5;
+    box-shadow: 0 -8px #262627;
     height: 40px;
   }
 }
@@ -89,13 +91,13 @@ body {
   80%,
   100% {
     opacity: 0.75;
-    box-shadow: 0 0 #076fe5;
+    box-shadow: 0 0 #262627;
     height: 32px;
   }
 
   40% {
     opacity: 1;
-    box-shadow: 0 -8px #076fe5;
+    box-shadow: 0 -8px #262627;
     height: 40px;
   }
 }
